--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-custom: ['https://discord.gg/q99CQEP', 'https://atzu.ml', 'https://nextgenteam.xyz/', 'https://atzu.club']
+custom: ['https://discord.gg/q99CQEP', 'https://atzu.space', 'https://nextgenteam.xyz/', 'https://atzu.club']
 github: [z3ro0k]
